# ControladorGastos

./: FormatearLista.py  FuncionesPrograma.py  README.md  main.py  pyproject.toml  test.py  ui.py
