[project]
name = "controladorgastos"
version = "0.1.0"
description = "Ejercicio clase 25/05/2026 para generar el primer repositorio funcional con GitHub y Poetry."
authors = [
    {name = "Jorge-COrral",email = "jorge_valdilecha@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tabulate (>=0.10.0,<0.11.0)",
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
